@@ -66,10 +66,6 @@ public:
   UnsignedInteger getOutputDimension() const;
   UnsignedInteger getInputDimension() const;
 
-  /** @deprecated */
-  UnsignedInteger getDimension() const;
-  UnsignedInteger getSpatialDimension() const;
-
   /** Computation of the spectral density function */
   virtual HermitianMatrix operator() (const Scalar frequency) const;
 
@@ -88,9 +84,6 @@ public:
 
   /** Spatial correlation accessor */
   virtual CorrelationMatrix getOutputCorrelation() const;
-
-  /** @deprecated */
-  virtual CorrelationMatrix getSpatialCorrelation() const;
 
   /** String converter */
   virtual String __repr__() const;
